--- a/style.css
+++ b/style.css
@@ -436,11 +436,14 @@ ul {
 }
 
 .contact-form textarea {
-  width: 100%;
-  height: 20vh;
-  background: #fbf8f7;
+  width: 327px;
+  height: 114px;
+  background: #FBF8F7;
   margin: 2vh 0;
   padding: 2vh 2vh 0;
+  font-family: 'Inter';
+  font-style: italic;
+  font-size: 15px;
 }
 
 .submit-btn {
