--- a/style.css
+++ b/style.css
@@ -516,19 +516,15 @@ footer ul {
     line-height: 20px;
     margin-right: 10px;
   }
-
   .head-nav-lists li {
     padding: 10px;
   }
-
   .my-logo {
     margin-left: 55px;
   }
-
   .menu-button {
     display: none;
   }
-
   .home-section {
     display: flex;
     background-image: url('./images/Illustration-header.svg');
@@ -539,139 +535,185 @@ footer ul {
     align-items: center;
     justify-content: flex-end;
   }
-
   .home-page {
     width: 50vw;
     margin-left: 4em;
     gap: 1em;
   }
-
   .home-page-header {
     font-style: normal;
     font-size: 72px;
     line-height: 82px;
   }
-
   .media-icons-container {
     display: flex;
     flex-direction: column;
   }
-
   .work-title-card {
     margin-top: 100px;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
   }
-
   .work-card-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
     margin-bottom: 20px;
+    padding-left: 8.4%;
   }
-
+  .work-card-post {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+    width: 80%;
+    padding-left: 2%;
+  }
+  .post-header {
+    font-family: 'Crete Round';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091E42;
+  }
+  .work-post-description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #091E42;
+  }
   .work-title-header {
     margin: 0;
-    color: var(--font-blue);
+    font-family: 'Crete Round';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091E42;
+    padding-left: 8.4%;
+    width: 50%;
   }
-
   .title-separator {
     width: 100%;
+    padding-right: 10%;
   }
-
   .work-card-holder {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2.4rem;
     row-gap: 3.7rem;
     margin: auto;
   }
-
   .work-card {
-    width: 100%;
+    width: 23.1rem;
+    height: 31.7rem;
     overflow: hidden;
+    margin-bottom: 1.9%;
   }
-
+  .work-card-holder {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 8.5%;
+    gap: 2.6%;
+    margin-bottom: 9.34%;
+  }
+  .info-card-holder {
+    padding-top: 40%;
+    gap: 2rem
+  }
   .card-button {
     display: none;
   }
-
   .about-me-section {
     margin-top: 100px;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-
   .about-me-sub-section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 110px 0;
     gap: 24px;
-    margin-left: 50px;
+    padding-left: 18%;
+    padding-top: 4%;
   }
-
   .about-me-header {
     line-height: 82px;
+    padding-left: 2.5%;
   }
-
   .about-me-description {
     font-size: 20px;
     line-height: 32px;
   }
-
   .my-resume-button {
     padding: 12px;
     gap: 10px;
   }
-
   .about-illustration img {
     display: none;
   }
-
   .about-illustration {
     margin: 110px 0;
     background: url('./images/illustration-about me.svg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 85%;
+    background-position-x: 100%;
   }
-
   .my-skills {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin-left: 52px;
-    padding: 130px 0;
+    padding-left: 9%;
     gap: 152px;
+    padding-bottom: 9.2%;
   }
-
   .my-skills ul li {
     text-align: start;
+    padding-top: 3.5%;
   }
-
+  .about-separator{
+    width: 79.9%;
+  }
   .contact-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     gap: 30px;
   }
-
   .contact-section h2 {
+    font-family: 'Inter';
     font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
     line-height: 52px;
-    display: flex;
-    align-items: start;
+    text-align: start;
     color: #262626;
+    padding-left: 7.2%;
+    padding-top: 7.5%;
+    width: 58%;
   }
-
+  .contact-form textarea {
+    width: 100%;
+    height: 7.2rem;
+    background: #FBF8F7;
+    margin: 2vh 0;
+    padding: 2vh 2vh 0;
+    font-family: var(--font-inter);
+    font-style: italic;
+    font-size: 15px;
+  }
   .contact-form {
     width: 90%;
     margin-top: 81px;
     margin-bottom: 54px;
     justify-content: center;
+    align-items: start;
+    padding-left: 2.4%;
   }
-
   textarea::placeholder {
     font-style: italic;
     color: var(--main-background);
   }
-
   .submit-btn {
     padding: 12px;
     gap: 10px;
@@ -682,28 +724,23 @@ footer ul {
 
 @media screen and (min-width: 992px) {
   /* main */
-
   .home-page-header {
     font-size: 72px;
     line-height: 82px;
     font-style: normal;
   }
-
   .discription-header {
     font-size: 32px;
     line-height: 44px;
   }
-
   .discription-paragraph {
     font-style: normal;
     font-size: 1.5rem;
     line-height: 32px;
   }
-
   .work-card-holder {
     grid-template-columns: repeat(3, 1fr);
   }
-
   .my-skills {
     grid-template-columns: repeat(3, 1fr);
   }
