--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ ul {
 .gym-fit-img {
   width: 100%;
   transition: all 0.6s linear;
+  cursor: pointer;
 }
 
 .gym-fit-img:hover {
@@ -245,6 +246,7 @@ ul {
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   transition: background-color 1s linear;
+  cursor: pointer;
 }
 
 .work-card-holder {
@@ -472,6 +474,8 @@ ul {
   border: none;
   font-family: var(--font-inter);
   font-weight: 700;
+  transition: background-color 1s linear;
+  cursor: pointer;
 }
 
 .submit-btn:hover {
@@ -679,6 +683,7 @@ footer ul {
   .my-resume-button {
     padding: 12px;
     gap: 10px;
+    cursor: pointer;
   }
 
   .about-illustration img {
