--- a/style.css
+++ b/style.css
@@ -310,7 +310,8 @@ ul {
 .work-card {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
