--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 7px 20px;
+  padding: 30px 20px;
   font-family: var(--font-roboto);
   font-weight: 700;
   font-size: 18px;
@@ -309,8 +309,7 @@ ul {
 .work-card {
   display: flex;
   flex-direction: column;
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
@@ -488,30 +487,27 @@ ul {
   color: #172b4d;
   text-align: center;
   font-size: 2em;
-  padding-top: 15vh;
+  padding-top: 5vh;
   margin-bottom: 10vh;
+  margin: 15px;
 }
 
-.contact-form {
-  margin-bottom: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.inputs-textarea {
+  margin-bottom: 10px;
 }
 
-.contact-form input {
+.inputs input {
   width: 100%;
   border-bottom: 0.5px solid lightgray;
-  padding: 5vh 0 2vh 2vh;
-  margin-bottom: 2vh;
+  padding: 2vh 0 2vh 2vh;
 }
 
-#error-message {
+.inputs .error {
   color: red;
-  display: block;
+  font-size: 1rem;
 }
 
-.contact-form textarea {
+.inputs textarea {
   width: 100%;
   height: 20vh;
   background: #fbf8f7;
@@ -520,6 +516,12 @@ ul {
   font-family: var(--font-inter);
   font-style: italic;
   font-size: 15px;
+}
+
+.submit {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 100px;
 }
 
 .submit-btn {
@@ -562,8 +564,8 @@ footer ul {
   justify-content: center;
   align-items: center;
   border-top: 1px solid #dfe1e6;
-  padding-top: 4vh;
-  padding-bottom: 4vh;
+  padding-top: 3vh;
+  padding-bottom: 7vh;
   color: #505f79;
   background-color: var(--font-white);
   background-repeat: no-repeat;
@@ -791,7 +793,7 @@ footer ul {
     width: 58%;
   }
 
-  .contact-form textarea {
+  .inputs textarea {
     width: 100%;
     height: 7.2rem;
     background: #fbf8f7;
@@ -804,7 +806,7 @@ footer ul {
 
   .contact-form {
     width: 90%;
-    margin-top: 81px;
+    margin-top: 100fpx;
     margin-bottom: 54px;
     justify-content: center;
     align-items: start;
@@ -814,6 +816,11 @@ footer ul {
   textarea::placeholder {
     font-style: italic;
     color: var(--main-background);
+  }
+
+  .submit {
+    display: flex;
+    justify-content: flex-start;
   }
 
   .submit-btn {
@@ -849,5 +856,10 @@ footer ul {
 
   .my-skills {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .contact-form {
+    padding-top: 100px;
+    padding-right: 100px;
   }
 }
