--- a/style.css
+++ b/style.css
@@ -309,7 +309,8 @@ ul {
 .work-card {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
@@ -488,7 +489,6 @@ ul {
   text-align: center;
   font-size: 2em;
   padding-top: 5vh;
-  margin-bottom: 10vh;
   margin: 15px;
 }
 
@@ -790,7 +790,7 @@ footer ul {
     color: #262626;
     padding-left: 7.2%;
     padding-top: 7.5%;
-    width: 58%;
+    width: 59%;
   }
 
   .inputs textarea {
@@ -806,7 +806,7 @@ footer ul {
 
   .contact-form {
     width: 90%;
-    margin-top: 100fpx;
+    margin-top: 100px;
     margin-bottom: 54px;
     justify-content: center;
     align-items: start;
@@ -859,7 +859,10 @@ footer ul {
   }
 
   .contact-form {
-    padding-top: 100px;
-    padding-right: 100px;
+    padding-right: 50px;
+  }
+
+  .inputs {
+    padding-top: 10px;
   }
 }
