--- a/style.css
+++ b/style.css
@@ -861,6 +861,7 @@ footer ul {
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+  overflow-y: auto;
 }
 
 .popup-close-btn-holder {
@@ -898,7 +899,7 @@ footer ul {
 }
 
 .popup-tag-list li {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 13px;
   font-weight: 600;
   line-height: 16px;
@@ -960,6 +961,7 @@ footer ul {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.03em;
+  margin: 3px;
 }
 
 .popup-btn svg path {
@@ -984,10 +986,11 @@ footer ul {
     font-weight: 400;
     text-align: left;
     font-style: normal;
+    margin: 5px;
   }
 
   .popup-tag-list li {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     text-align: left;
     border: 1px solid #979493;
     font-style: normal;
